# playground-rs

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
benches/: bench-legacy-0.rs  bench-legacy-2.rs  bench-legayc-1.rs  bench.rs  my_bench_0.rs
src/: backtrace.rs  compute.wgsl  fthe.rs  main.rs  report.rs  wgpu_demosaicing.rs  wgpu_surface_adapter.rs
