[package]
name = "playground"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = ""
keywords = []
repository = "https://github.com/qdwang/playground-rs"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "bench"
harness = false

[dependencies]
wide = "0.7.11"

[profile.release]
codegen-units = 1
lto="fat"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
