[package]
name = "playground"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = ""
keywords = []
repository = "https://github.com/qdwang/playground-rs"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "bench"
harness = false

[dependencies]
# bincode = "1.3.3"
# tfhe = { version = "*", features = ["boolean", "shortint", "integer", "aarch64-unix"] }

[profile.release]
codegen-units = 1
lto="fat"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
